<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="0"
                android:layout_gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:contentDescription="@string/back"
                android:src="@mipmap/ic_library_music_black_24dp"
                android:text="@string/library" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:paddingLeft="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/playlistName"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="@string/library"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/playlistTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="@string/library"
                    android:textSize="12sp"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/playlistIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@mipmap/ic_keyboard_arrow_right_black_24dp"
                android:contentDescription="@string/play" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>