<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.danie.musicstructure.MainActivity">

    <LinearLayout
        android:id="@+id/library_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <ImageView
            android:id="@+id/img_library_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_library_music_black_24dp"/>

        <TextView
            android:id="@+id/library"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.9"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/library"/>
        
        <ImageView
            android:id="@+id/img_library"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@mipmap/ic_keyboard_arrow_right_black_24dp"/>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>

    <LinearLayout
        android:id="@+id/favorites_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <ImageView
            android:id="@+id/img_favorites_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_favorite_black_24dp"/>

        <TextView
            android:id="@+id/favorites"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.9"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/favorites"/>

        <ImageView
            android:id="@+id/img_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@mipmap/ic_keyboard_arrow_right_black_24dp"/>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>

    <LinearLayout
        android:id="@+id/recent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <ImageView
            android:id="@+id/img_recent_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_schedule_black_24dp"/>

        <TextView
            android:id="@+id/recent"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.9"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/recent"/>

        <ImageView
            android:id="@+id/img_recent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@mipmap/ic_keyboard_arrow_right_black_24dp"/>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"/>

    <LinearLayout
        android:id="@+id/playlist_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <ImageView
            android:id="@+id/img_playlist_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_library_music_black_24dp"/>

        <TextView
            android:id="@+id/playlist"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.9"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/library"/>

        <ImageView
            android:id="@+id/img_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@mipmap/ic_keyboard_arrow_right_black_24dp"/>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="#c0c0c0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:background="@drawable/border">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:src="@mipmap/ic_library_music_black_24dp"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/currentMusic"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="@string/currentMusic"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/currentArtist"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="@string/currentArtist"
                    android:textSize="11sp"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/favoriteIcon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@mipmap/ic_favorite_black_24dp"
                android:contentDescription="@string/play" />

            <ImageView
                android:id="@+id/playIcon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@mipmap/ic_play_arrow_black_24dp"
                android:contentDescription="@string/play" />

            <ImageView
                android:id="@+id/fastForwardIcon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@mipmap/ic_fast_forward_black_24dp"
                android:contentDescription="@string/play" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>